# EchoLens2

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  PROGRESS.md  README.md  README_EN.md  SECURITY.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  run.py
backend/.omc/: project-memory.json
backend/.omc/state/: agent-replay-7068349d-9374-4bc8-a401-5b471b864cfc.jsonl  last-tool-error.json  subagent-tracking.json
backend/.omc/state/checkpoints/: checkpoint-2026-05-21T11-53-11-321Z.json  checkpoint-2026-05-21T12-07-05-767Z.json  checkpoint-2026-05-22T02-12-58-980Z.json  checkpoint-2026-05-22T03-56-48-282Z.json  checkpoint-2026-05-22T04-19-03-401Z.json  checkpoint-2026-05-22T04-40-01-631Z.json  checkpoint-2026-05-22T04-51-46-763Z.json  checkpoint-2026-05-22T05-06-28-494Z.json  (+2 more)
backend/app/: __init__.py  config.py
backend/app/api/: __init__.py  crawler.py  decision.py  prediction.py  projects.py  report.py  settings.py  simulation.py
backend/app/crawler/: __init__.py  seed_report.py
backend/app/dashboard/: __init__.py  synthesizer.py
backend/app/kg/: __init__.py  extractor.py  lightrag_engine.py  memory.py  ontology.py  search.py  store.py  sync.py
backend/app/models/: __init__.py  project.py  report.py  run.py
backend/app/predictor/: __init__.py  causal.py  ensemble.py  explainer.py  history.py  timeseries.py
backend/app/services/: __init__.py  crawler_store.py  decision_engine.py  duckdb_store.py  llm_client.py  prediction_jobs.py  project_store.py  reliability_tier.py  report_builder.py  report_html.py  sim_jobs.py  task_manager.py
backend/app/simulator/: __init__.py  action.py  agent.py  decision.py  ipc.py  network.py  population.py  runner.py
backend/app/utils/: __init__.py
backend/tests/: conftest.py  test_blueprints_register.py  test_crawler_api.py  test_crawler_compliance.py  test_crawler_engine_and_seed.py  test_crawler_pipeline.py  test_decision_api.py  test_health.py  test_kg_kuzu_smoke.py  test_kg_lightrag_sync.py  test_kg_search.py  test_prediction_api.py  test_predictor_causal.py  test_predictor_explainer.py  test_predictor_history.py  test_predictor_timeseries.py  test_project_store_duckdb.py  test_projects_api.py  test_reliability_tier.py  test_report_api.py  test_schemas.py  test_seed_report_api.py  test_settings_api.py  test_simulation_api_async.py  test_simulator_runner.py
docs/: API.md  BRAND_GUIDE.md  (+5 more)
frontend/src-tauri/: .gitignore  Cargo.toml  LICENSE.txt  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs  main.rs
(+110 files in other folders)
