[package]
name = "echolens-desktop"
version = "2.0.0"
description = "EchoLens 2.0 desktop client"
authors = ["EchoLens Team"]
license = "AGPL-3.0"
edition = "2021"
rust-version = "1.77"

# This is a SCAFFOLD — running `cargo build` requires a Rust toolchain
# (`rustup install stable`) and the Tauri CLI (`cargo install tauri-cli --version "^2.0"`).
# Day-to-day desktop dev:
#   npm install -D @tauri-apps/cli@^2.0
#   npx tauri dev
# Production bundle:
#   VITE_BUILD_TARGET=tauri npm run build && npx tauri build

[lib]
name = "echolens_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# Default features compiled into bundles.
default = ["custom-protocol"]
# This feature is used to enable the embedded webview2 runtime on Windows.
custom-protocol = ["tauri/custom-protocol"]
